kubernetes/credentialapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentialapi
  labels:
    app: credentialapi
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credentialapi
  template:
    metadata:
      labels:
        app: credentialapi
        group: backend
    spec:
      containers:
        - name: credentialapi
          image: ilhamgibran/credential-api:0.1.1
          ports:
            - containerPort: 8080
