kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        type: db
    spec:
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-persistent-volume-claim
      containers:
        - name: mongodb
          image: ilhamgibran/mongodb-credential:0.1.1
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/db
