kubernetes/credentialapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: credentialapi
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: credentialapi
  ports:
    - port: 8080
      targetPort: 8080
