kubernetes/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    group: credentialapp
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
